assets/components/src/tabbed-navigation/style.scss
/**
 * Tabbed Navigation
 */

@import '~@wordpress/base-styles/colors';
@import '../../../shared/scss/colors';

.newspack-tabbed-navigation {
	margin-bottom: -32px;

	ul {
		display: flex;
		margin: 0 8px;
	}

	li {
		margin: 0 8px;
		padding: 0;
		display: inline-block;
		flex: 1;
		text-align: center;
	}

	a {
		background: $light-gray-500;
		border-radius: 4px 4px 0 0;
		color: $dark-gray-900;
		display: flex;
		justify-content: center;
		margin: 0;
		padding: 8px;
		text-decoration: none;

		&:active,
		&:focus,
		&:hover {
			background: white;
		}

		&:focus {
			outline: none;
			box-shadow: inset 0 0 0 2px $primary-500;
		}

		&.selected {
			background: white;
			color: $primary-500;
		}
	}
}

